--- a/contest.html
+++ b/contest.html
@@ -179,9 +179,10 @@
                         <button type="button" class="btn close text-right" data-dismiss="modal" aria-hidden="true" style="position: absolute; top: 2%; right: 2%;">&times;</button>
                         <img src="assets/img/end.jpg" class="" width="100%">
                         <h1 class="end-text text-white mb-3">紅方 - 謝昀熹</h1>
-                        <p class="text60 text-white mb-3" style="margin-left: 20rem;">胜！</p>
+                        <img src="assets/win.png" class="w-15" style="margin-left: 32rem;">
+                        <!--<p class="text60 text-white mb-3" style="margin-left: 20rem;">胜！</p>-->
                         <div class="box">
-                            <a class="toindex text-white" href="index.html">點擊回首頁</a>
+                            <a class="toindex text-white" href="index.html" style="margin-top: -10rem;">點擊回首頁</a>
                         </div>
                     </div>
                 </div>
