--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase ff-DFKai-sb" style="font: size 50px; margin-top: 50px !important;">劍道電子評分系統</div>
+                <div class="masthead-heading text-uppercase ff-DFKai-sb" style="font: size 50px; margin-top: 50px !important;">劍道電子評測系統</div>
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
