--- a/contest-log.html
+++ b/contest-log.html
@@ -109,9 +109,9 @@
                         <div class = "col-md-6 stt2">
                             <div class = "mt-3 row" style = color:#ffffff>
                                 <div class = "col-md-2 text-center">
-                                    <a href="video1.html" target="_blank" class="video hvr-float"><h5 class="video">0:43</h5></a>
+                                    <a href="video1.html" target="_blank" class="video hvr-float"><h5 class="video">0:43&nbsp;</h5></a>
                                     <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:11&nbsp;</h5></a>
-                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:57</h5></a>
+                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:57&nbsp;</h5></a>
                                 </div>
                                 <div class = "col-md-6">
                                     <h5>清華大學 打 交通大學 面</h5>
