--- a/contest-log.html
+++ b/contest-log.html
@@ -110,7 +110,7 @@
                             <div class = "mt-3 row" style = color:#ffffff>
                                 <div class = "col-md-2 text-center">
                                     <a href="video1.html" target="_blank" class="video hvr-float"><h5 class="video">0:43&nbsp;</h5></a>
-                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:11&nbsp;</h5></a>
+                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:11&nbsp;&nbsp;</h5></a>
                                     <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:57&nbsp;</h5></a>
                                 </div>
                                 <div class = "col-md-6">
