--- a/video2.html
+++ b/video2.html
@@ -92,6 +92,12 @@
                             </div>
                             <video src="assets/video/殘心不足.mp4" controls class="mw-100 mt-2 br-30"></video>
                             <div class = "mt-4 row text-center">
+                                <div class = "col-md-4 text-white ml-2 mt-25 text20 fw600">力道分級</div>
+                                <div class = "col-md-8 mr-5">
+                                    <img src="assets/w1.png" class="w-80 align-items-center">
+                                </div>
+                            </div>
+                            <div class = "mt-4 row text-center">
                                 <div class = "col-md-4"></div>
                                 <div class = "col-md-4 buttom">
                                     <a href="contest-log.html" class="text-decoration-none"><h6 class="cursor-pt text-white">點擊回試合紀錄</h6></a>
