--- a/video1.html
+++ b/video1.html
@@ -91,6 +91,14 @@
                                 </div>
                             </div>
                             <video src="assets/video/面部.mp4" controls class="mw-100 mt-2 br-30"></video>
+                            
+                            <div class = "mt-4 row text-center">
+                                <div class = "col-md-4 text-white ml-2 mt-25 text20 fw600">力道分級</div>
+                                <div class = "col-md-8 mr-5">
+                                    <img src="assets/w.png" class="w-80 align-items-center">
+                                </div>
+                                <!-- <div class = "col-md-4"></div> -->
+                            </div>
                             <div class = "mt-4 row text-center">
                                 <div class = "col-md-4"></div>
                                 <div class = "col-md-4 buttom">
