--- a/user.html
+++ b/user.html
@@ -63,6 +63,7 @@
                                 <p class="mb-3">⑫ 林奕伸 vs 何宗穎</p>
                                 <p class="mt-1 mb-3">⑬ 謝昀熹 vs 許伊辰</p>
                                 <p class="mb-3">⑭ 蔡璧如 vs 何宗穎</p>
+                                <p class="mb-3">⑮ 何宗穎 vs 謝昀熹</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-2" style="color:rgba(127, 85, 57, 0.7) !important;font-size:14px;font-family:手寫體;">
@@ -70,6 +71,7 @@
                             <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
                             <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
                             <div class="result">
+                                <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
                                 <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
                                 <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
                                 <p class="mt-1 mb-4"><a href="contest-log.html" target="_blank" class="record">試合紀錄</a></p>
