--- a/video2.html
+++ b/video2.html
@@ -84,7 +84,7 @@
                                     <h5 class="video">1:11</h5>
                                 </div>
                                 <div class = "col-md-6">
-                                    <h5>交通大學 打 清華大學 突部</h5>
+                                    <h5>交通大學 打 清華大學 面</h5>
                                 </div>
                                 <div class = "col-md-4">
                                     <h5>殘心不足 （1:0）</h5>
