--- a/contest-log.html
+++ b/contest-log.html
@@ -109,13 +109,13 @@
                         <div class = "col-md-6 stt2">
                             <div class = "mt-3 row" style = color:#ffffff>
                                 <div class = "col-md-2 text-center">
-                                    <a href="video1.html" target="_blank" class="video hvr-float"><h5 class="video">0:43&nbsp;</h5></a>
-                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:11&nbsp;&nbsp;</h5></a>
-                                    <a href="video2.html" target="_blank" class="video hvr-float"><h5 class="video">1:57&nbsp;</h5></a>
+                                    <a href="video1.html" class="video hvr-float"><h5 class="video">0:43&nbsp;</h5></a>
+                                    <a href="video2.html" class="video hvr-float"><h5 class="video">1:11&nbsp;&nbsp;</h5></a>
+                                    <a href="video2.html" class="video hvr-float"><h5 class="video">1:57&nbsp;</h5></a>
                                 </div>
                                 <div class = "col-md-6">
                                     <h5>清華大學 打 交通大學 面</h5>
-                                    <h5>交通大學 打 清華大學 突部</h5>
+                                    <h5>交通大學 打 清華大學 面</h5>
                                     <h5>清華大學 打 交通大學 胴部</h5>
                                 </div>
                                 <div class = "col-md-4">
